src/test/deca/context/invalid/operationetounon.deca
// Description:
//    programme utilisant et sur entier 
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 06/01/2025

{   
   int x = 3&&4;
}